{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 75,
  "lineage": "e0eb5dd2-13ed-3ea5-1001-60d3b367645c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.50",
            "association_id": "eipassoc-0bee41954a4e0e42c",
            "domain": "vpc",
            "id": "eipalloc-048dbe307931247e1",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0da1cab8d1e7ead8d",
            "private_dns": "ip-10-0-0-50.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.50",
            "public_dns": "ec2-13-250-211-3.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.211.3",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.tr_gw",
            "aws_network_interface.tr_ni",
            "aws_security_group.tr_sg_01",
            "aws_subnet.tr_sn",
            "aws_vpc.tr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.51",
            "association_id": "eipassoc-07f3b547a96a69e40",
            "domain": "vpc",
            "id": "eipalloc-0a8fae4dccbea85eb",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0da1cab8d1e7ead8d",
            "private_dns": "ip-10-0-0-51.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.51",
            "public_dns": "ec2-52-76-238-195.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.76.238.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.tr_gw",
            "aws_network_interface.tr_ni",
            "aws_security_group.tr_sg_01",
            "aws_subnet.tr_sn",
            "aws_vpc.tr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tr_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:812192580694:internet-gateway/igw-07cb4d5592d3cc048",
            "id": "igw-07cb4d5592d3cc048",
            "owner_id": "812192580694",
            "tags": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-03e25f835955c75f2"
          },
          "dependencies": [
            "aws_vpc.tr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "tr_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0da1cab8d1e7ead8d",
            "ipv6_address_count": 0,
            "mac_address": "02:b4:62:a5:4a:72",
            "private_ip": "10.0.0.51",
            "private_ips": [
              "10.0.0.50",
              "10.0.0.51"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-0d09948d0cefa96c6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfe882cbc75c26b7",
            "tags": {
              "AutoTag_CreateTime": "2021-03-16T08:03:04Z",
              "AutoTag_Creator": "arn:aws:iam::812192580694:user/e.bui"
            }
          },
          "dependencies": [
            "aws_security_group.tr_sg_01",
            "aws_subnet.tr_sn",
            "aws_vpc.tr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tr_r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e404a5ae0d94f097",
            "owner_id": "812192580694",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cb4d5592d3cc048",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cb4d5592d3cc048",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-03e25f835955c75f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tr_gw",
            "aws_vpc.tr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tr_sna",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08df44c35c487faa8",
            "route_table_id": "rtb-0e404a5ae0d94f097",
            "subnet_id": "subnet-0bfe882cbc75c26b7"
          },
          "dependencies": [
            "aws_internet_gateway.tr_gw",
            "aws_route_table.tr_r",
            "aws_subnet.tr_sn",
            "aws_vpc.tr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tr_sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:812192580694:security-group/sg-0d09948d0cefa96c6",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d09948d0cefa96c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Tr Security Group 01",
            "name_prefix": "",
            "owner_id": "812192580694",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Tr SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e25f835955c75f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tr_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:812192580694:subnet/subnet-0bfe882cbc75c26b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0bfe882cbc75c26b7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812192580694",
            "tags": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-03e25f835955c75f2"
          },
          "dependencies": [
            "aws_vpc.tr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:812192580694:vpc/vpc-03e25f835955c75f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e864cf1007c1fc52",
            "default_route_table_id": "rtb-01a8a4f02fcf26c14",
            "default_security_group_id": "sg-08939af8cad24af09",
            "dhcp_options_id": "dopt-cfa18ba8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03e25f835955c75f2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01a8a4f02fcf26c14",
            "owner_id": "812192580694"
          }
        }
      ]
    },
    {
      "module": "module.tr_vm",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f86a70488991335e",
            "arn": "arn:aws:ec2:ap-southeast-1:812192580694:instance/i-050d6d58156008fe2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050d6d58156008fe2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "trvm",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f6aeb1930efb7f5b",
            "private_dns": "ip-172-31-26-3.ap-southeast-1.compute.internal",
            "private_ip": "172.31.26.3",
            "public_dns": "ec2-54-255-235-79.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.235.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "AutoTag_CreateTime": "2021-03-16T08:03:00Z",
                  "AutoTag_Creator": "arn:aws:iam::812192580694:user/e.bui"
                },
                "throughput": 0,
                "volume_id": "vol-026a333b83f3b5d78",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-dab95ebc",
            "tags": {
              "AutoTag_CreateTime": "2021-03-16T08:03:00Z",
              "AutoTag_Creator": "arn:aws:iam::812192580694:user/e.bui"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-2ccb3a51"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f86a70488991335e",
            "arn": "arn:aws:ec2:ap-southeast-1:812192580694:instance/i-09d0e62e775da88d9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d0e62e775da88d9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "trvm",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d379a9772e70999",
            "private_dns": "ip-172-31-27-24.ap-southeast-1.compute.internal",
            "private_ip": "172.31.27.24",
            "public_dns": "ec2-18-139-115-128.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.115.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "AutoTag_CreateTime": "2021-03-16T08:03:00Z",
                  "AutoTag_Creator": "arn:aws:iam::812192580694:user/e.bui"
                },
                "throughput": 0,
                "volume_id": "vol-0ed4ce949deb20793",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-dab95ebc",
            "tags": {
              "AutoTag_CreateTime": "2021-03-16T08:03:00Z",
              "AutoTag_Creator": "arn:aws:iam::812192580694:user/e.bui"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-2ccb3a51"
            ]
          }
        }
      ]
    }
  ]
}